--- a/Memory Game Card.html
+++ b/Memory Game Card.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>لعبة الذاكرة</title>
+    <title>Memory Game Carts</title>
    <style>
     body {
         display: flex;
         justify-content: center;
         align-items: center;
         height: 100vh;
-        background-color: #24242a;
+        background: linear-gradient(1deg, #080808f1,#2c2288 ,#8d02f7);
         margin: 0;
     }
     
@@ -49,9 +49,11 @@
         display: block;
     }
     h1{
-        color: white;
+        color: rgb(240, 7, 7);
         position: absolute;
-        top: 20px;
+        top: 50px;
+        font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+        font-size: 50px;
     }
    </style>
 </head>
