--- a/index.html
+++ b/index.html
@@ -4,39 +4,46 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Rotating Image Gallery</title>
+    <link rel="shortcut icon" href="image/tigmigame.png" type="image/x-icon">
+    <title>Tigmi Game</title>
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
+    <!------------- loading -------------->
+<div class="loading-overlay">
+  <div id="loading-logo">
+    <img src="image/tigmigame.png" alt="LOGO" loading="lazy">
+    <h2 id="loading-text"></h2>
+  </div>
+</div>
+
+  
+
+
+<div class="le-contenu-main">
     <div class="image-container">
       <span style="--i: 1">
-        <a href="Memory Game Card.html"><img src="image/Memory Game Card.jpg" /></a>
+        <a href="Memory Game Card.html"><img src="image/cartgame.jpg" width="400px" height="200px" /></a>
       </span>
       <span style="--i: 2">
-        <a href=""><img src="https://picsum.photos/id/23/300/200" /></a>
+        <a href="xo.html"><img src="image/xo.webp" width="400px" height="200px"/></a>
       </span>
       <span style="--i: 3">
-        <a href=""><img src="https://picsum.photos/id/48/300/200" /></a>
+        <a href="snake.html"><img src="image/snakegame.png" width="400px" height="200px"/></a>
       </span>
       <span style="--i: 4">
-        <a href=""><img src="https://picsum.photos/id/12/300/200" /></a>
+        <a href="chessgame.html"><img src="image/chessgame.png" width="400px" height="200px" /></a>
       </span>
       <span style="--i: 5">
-        <a href=""><img src="https://picsum.photos/id/59/300/200" /></a>
+        <a href=""><img src="" /></a>
       </span>
-      <span style="--i: 6">
-        <a href=""><img src="https://picsum.photos/id/160/300/200" /></a>
-      </span>
-      <span style="--i: 7">
-        <a href=""><img src="https://picsum.photos/id/370/300/200" /></a>
-      </span>
-      <span style="--i: 8">
-        <a href=""><img src="https://picsum.photos/id/478/300/200" /></a>
-      </span>
+      
+      
     </div>
     <div class="btn-container">
       <button class="btn" id="prev">Prev</button>
       <button class="btn" id="next">Next</button>
+    </div>
     </div>
     <script src="index.js"></script>
   </body>
